# ai-api

./: .dockerignore  .gitignore  Dockerfile  README.md  akv.py  auth.py  auth_utils.py  boc_job_description.md  completion_request.py  generate_mermaid_diagram.py  logging_config.py  main.py  pyproject.toml  requirements.txt  storage_account.py  streamlit_app.py  triage_agent.py  utils.py  vector_store.py  voice_client.py
.github/workflows/: main_tran-llm.yml
dto/: __init__.py  chat_response.py
llm_agents/: account_agent.py  chatbot_graph.py  knowledge_agent.py  langgraph_chatbot.py  search_agent.py  voice_assistant.py
llm_agents/interview_agents/: __init__.py  evaluator_agent.py  interview_agent.py  triage_agent.py
llm_agents/interview_models/: __init__.py  info_gathering.py  process.py  scorecard.py  state.py
prompts/: voice_prompts.py
routers/: langgraph.py  speech.py  upload.py  voice_agent.py
sandbox/: akv_printer.py  file_downloader.py  file_uploader.py  generate_mermaid_diagram.py  test.ipynb  test_langgraph_chatbot.py  voice_assistant.py  voice_client.py
sandbox/langgraph_V1/agent/: agent.py
sandbox/langgraph_V1/agent/utils/: nodes.py  state.py  tools.py
sandbox/voice_agent/: streaming_test.ipynb  stt_class_test.py  test_stream_fix.py  tts_class_test.py  voice_agent_main.py  voice_agent_tts.py  voice_agent_tts_example.py
sandbox/voice_agent/.ipynb_checkpoints/: streaming_test-checkpoint.ipynb
schemas/: completion_request.py  voice_request.py
services/: cosmos_checkpointer.py  llm_service.py  stt_service.py  tts_service.py
test/: __init__.py  test_langgraph_chatbot.py  test_langgraph_chatbot_stream.py
test/llm_agents/: test_chatbot_graph.py
