[project]
name = "ai-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types",
    "anyio",
    "attrs",
    "azure-core",
    "azure-identity",
    "azure-keyvault-secrets",
    "azure-storage-blob",
    "certifi",
    "cffi",
    "charset-normalizer",
    "click",
    "colorama",
    "cryptography",
    "distro",
    "ecdsa",
    "fastapi",
    "greenlet",
    "griffe",
    "h11",
    "httpcore",
    "httpx",
    "httpx-sse",
    "idna",
    "isodate",
    "jiter",
    "jsonpatch",
    "jsonpointer",
    "jsonschema",
    "jsonschema-specifications",
    "langchain",
    "langchain-core",
    "langchain-openai",
    "langchain-text-splitters",
    "langgraph",
    "langgraph-checkpoint",
    "langgraph-prebuilt",
    "langgraph-sdk",
    "langsmith",
    "mcp",
    "msal",
    "msal-extensions",
    "numpy",
    "openai",
    "openai-agents",
    "orjson",
    "ormsgpack",
    "packaging",
    "pyasn1",
    "pycparser",
    "pydantic",
    "pydantic-core",
    "pydantic-settings",
    "pyjwt",
    "python-dotenv",
    "python-jose",
    "python-multipart",
    "pyyaml",
    "referencing",
    "regex",
    "requests",
    "requests-toolbelt",
    "rpds-py",
    "rsa",
    "six",
    "sniffio",
    "sounddevice",
    "sqlalchemy",
    "sse-starlette",
    "starlette",
    "tenacity",
    "tiktoken",
    "tqdm",
    "types-requests",
    "typing-extensions",
    "typing-inspection",
    "urllib3",
    "uvicorn",
    "websockets",
    "xxhash",
    "zstandard",
]
