[project]
name = "ai-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types",
    "anyio",
    "attrs",
    "azure-core",
    "azure-identity",
    "azure-keyvault-secrets",
    "azure-storage-blob",
    "certifi",
    "cffi",
    "charset-normalizer",
    "click",
    "colorama",
    "cryptography",
    "distro",
    "ecdsa",
    "fastapi",
    "greenlet",
    "griffe",
    "h11",
    "httpcore",
    "httpx",
    "httpx-sse",
    "idna",
    "isodate",
    "jiter",
    "jsonpatch",
    "jsonpointer",
    "jsonschema",
    "jsonschema-specifications",
    "kokoro>=0.9.4",
    "langchain",
    "langchain-community>=0.4.1",
    "langchain-core",
    "langchain-openai",
    "langchain-text-splitters",
    "langgraph",
    "langgraph-checkpoint",
    "langgraph-prebuilt",
    "langgraph-sdk",
    "langsmith",
    "mcp",
    "msal",
    "msal-extensions",
    "numpy",
    "openai",
    "openai-agents",
    "orjson",
    "ormsgpack",
    "packaging",
    "pip>=25.3",
    "pyasn1",
    "pycparser",
    "pydantic",
    "pydantic-core",
    "pydantic-settings",
    "pyjwt",
    "pypdf>=6.2.0",
    "python-dotenv",
    "python-jose",
    "python-multipart",
    "pyyaml",

    "referencing",
    "regex",
    "requests",
    "requests-toolbelt",
    "rpds-py",
    "rsa",
    "six",
    "sniffio",

    "sqlalchemy",
    "sse-starlette",
    "starlette",
    "tenacity",
    "tiktoken",
    "tqdm",
    "types-requests",
    "typing-extensions",
    "typing-inspection",
    "urllib3",
    "uvicorn",
    "websockets",
    "xxhash",
    "zstandard",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["test"]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(name)s:%(lineno)d - %(message)s"
log_cli_date_format = "%H:%M:%S"
